--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,30 +59,31 @@ retrolambda {
   javaVersion JavaVersion.VERSION_1_7
 }
 
+def appCompatVersion = "23.2.0"
+def retrofitVersion = "2.0.0-beta4"
+
 dependencies {
   compile fileTree(include: '*.jar', dir: 'libs')
-//  compile project(':reddit')
   compile project(':bypass')
   compile project(':dlogger')
-  // 23.1.1 breaks header view functionality in NavigationView
-  compile 'com.android.support:appcompat-v7:23.2.0'
-  compile 'com.android.support:support-v4:23.2.0'
-  compile 'com.android.support:design:23.2.0'
-  compile 'com.android.support:recyclerview-v7:23.2.0'
-  compile 'com.android.support:cardview-v7:23.2.0'
-  compile 'com.google.android.gms:play-services-analytics:8.4.0' // Required for Flurry
-  compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
-  compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
-  compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
-  compile 'com.squareup.picasso:picasso:2.5.2'
-  compile 'com.jakewharton:butterknife:7.0.1'
-  compile 'io.reactivex:rxjava:1.1.0'
-  compile 'io.reactivex:rxandroid:1.1.0'
-  compile 'com.github.damien5314:TimeSinceTextView:1.1.1'
-  compile 'org.parceler:parceler-api:1.0.4'
-  apt 'org.parceler:parceler:1.0.4'
+  compile "com.android.support:appcompat-v7:$appCompatVersion"
+  compile "com.android.support:support-v4:$appCompatVersion"
+  compile "com.android.support:design:$appCompatVersion"
+  compile "com.android.support:recyclerview-v7:$appCompatVersion"
+  compile "com.android.support:cardview-v7:$appCompatVersion"
+  compile "com.google.android.gms:play-services-analytics:8.4.0" // Required for Flurry
+  compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
+  compile "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+  compile "com.squareup.retrofit2:adapter-rxjava:$retrofitVersion"
+  compile "com.squareup.picasso:picasso:2.5.2"
+  compile "com.jakewharton:butterknife:7.0.1"
+  compile "io.reactivex:rxjava:1.1.0"
+  compile "io.reactivex:rxandroid:1.1.0"
+  compile "com.github.damien5314:TimeSinceTextView:1.1.1"
+  compile "org.parceler:parceler-api:1.0.4"
+  apt "org.parceler:parceler:1.0.4"
   // Debugging dependencies
-  compile 'com.facebook.stetho:stetho:1.2.0'
-  debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
-  releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
+  compile "com.facebook.stetho:stetho:1.2.0"
+  debugCompile "com.squareup.leakcanary:leakcanary-android:1.3.1"
+  releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:1.3.1"
 }
