--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,6 @@ def retrofitVersion = "2.0.0-beta4"
 dependencies {
   compile fileTree(include: '*.jar', dir: 'libs')
   compile project(':bypass')
-  compile project(':dlogger')
   compile "com.android.support:appcompat-v7:$appCompatVersion"
   compile "com.android.support:support-v4:$appCompatVersion"
   compile "com.android.support:design:$appCompatVersion"
@@ -82,8 +81,8 @@ dependencies {
   compile "com.github.damien5314:TimeSinceTextView:1.1.1"
   compile "org.parceler:parceler-api:1.0.4"
   apt "org.parceler:parceler:1.0.4"
+  compile 'com.jakewharton.timber:timber:4.1.0'
   // Debugging dependencies
-  compile "com.facebook.stetho:stetho:1.2.0"
   debugCompile "com.squareup.leakcanary:leakcanary-android:1.3.1"
   releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:1.3.1"
 }
