--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.0.0-beta6'
+    classpath 'com.android.tools.build:gradle:2.1.0-alpha1'
     classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
     classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.1.1'
     classpath 'com.github.ben-manes:gradle-versions-plugin:0.11.3'
