--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
       applicationIdSuffix ".debug"
       versionNameSuffix '-dev'
       buildConfigField "String", "REDDIT_APP_ID", "\"" + REDDIT_APP_ID + "\""
+      buildConfigField "String", "REDDIT_REDIRECT_URI", "\"" + REDDIT_REDIRECT_URI + "\""
       buildConfigField "String", "FLURRY_API_KEY", "\"" + FLURRY_API_KEY_DEBUG + "\""
     }
     release {
@@ -39,6 +40,7 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
       signingConfig signingConfigs.release
       buildConfigField "String", "REDDIT_APP_ID", "\"" + REDDIT_APP_ID + "\""
+      buildConfigField "String", "REDDIT_REDIRECT_URI", "\"" + REDDIT_REDIRECT_URI + "\""
       buildConfigField "String", "FLURRY_API_KEY", "\"" + FLURRY_API_KEY_PROD + "\""
     }
   }
@@ -61,7 +63,6 @@ retrolambda {
 }
 
 def appCompatVersion = "23.2.0"
-def retrofitVersion = "2.0.0"
 
 dependencies {
   compile fileTree(include: '*.jar', dir: 'libs')
@@ -72,13 +73,11 @@ dependencies {
   compile "com.android.support:recyclerview-v7:$appCompatVersion"
   compile "com.android.support:cardview-v7:$appCompatVersion"
   compile "com.google.android.gms:play-services-analytics:8.4.0" // Required for Flurry
-  compile "com.squareup.retrofit2:retrofit:$retrofitVersion"
-  compile "com.squareup.retrofit2:converter-gson:$retrofitVersion"
-  compile "com.squareup.retrofit2:adapter-rxjava:$retrofitVersion"
   compile "com.squareup.picasso:picasso:2.5.2"
   compile "com.jakewharton:butterknife:7.0.1"
   compile "io.reactivex:rxjava:1.1.0"
   compile "io.reactivex:rxandroid:1.1.0"
+  compile "com.github.damien5314:rxreddit:0.1"
   compile "com.github.damien5314:TimeSinceTextView:1.1.1"
   compile "org.parceler:parceler-api:1.0.4"
   apt "org.parceler:parceler:1.0.4"
