--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,9 +74,10 @@ dependencies {
   compile "com.google.android.gms:play-services-analytics:8.4.0" // Required for Flurry
   compile "com.squareup.picasso:picasso:2.5.2"
   compile "com.jakewharton:butterknife:7.0.1"
-  def rxreddit_version = "0.4"
+  def rxreddit_version = "95a220fa2bedc54a60e722681e805cb31d57add9"
   compile "com.github.damien5314.RxReddit:library:$rxreddit_version"
   compile "com.github.damien5314.RxReddit:android:$rxreddit_version"
+  debugCompile "com.github.damien5314.RxReddit:mock:$rxreddit_version"
   compile "io.reactivex:rxandroid:1.1.0"
   compile "io.reactivex:rxjava:1.1.0"
   compile "com.github.damien5314:TimeSinceTextView:1.2.3"
