--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,16 +65,16 @@ retrolambda {
 dependencies {
   compile fileTree(include: '*.jar', dir: 'libs')
   compile project(':bypass')
-  def appCompatVersion = "23.2.0"
-  compile "com.android.support:appcompat-v7:$appCompatVersion"
-  compile "com.android.support:support-v4:$appCompatVersion"
-  compile "com.android.support:design:$appCompatVersion"
-  compile "com.android.support:recyclerview-v7:$appCompatVersion"
-  compile "com.android.support:cardview-v7:$appCompatVersion"
+  def appcompat_version = "23.2.0"
+  compile "com.android.support:appcompat-v7:$appcompat_version"
+  compile "com.android.support:support-v4:$appcompat_version"
+  compile "com.android.support:design:$appcompat_version"
+  compile "com.android.support:recyclerview-v7:$appcompat_version"
+  compile "com.android.support:cardview-v7:$appcompat_version"
   compile "com.google.android.gms:play-services-analytics:8.4.0" // Required for Flurry
   compile "com.squareup.picasso:picasso:2.5.2"
   compile "com.jakewharton:butterknife:7.0.1"
-  def rxreddit_version = "1411b443bd869d4602617903ece02cc076354201"
+  def rxreddit_version = "b49fa5cb8a08d15a9b2b6282e7bddaa30e487084"
   compile "com.github.damien5314.RxReddit:library:$rxreddit_version"
   compile "com.github.damien5314.RxReddit:android:$rxreddit_version"
   debugCompile "com.github.damien5314.RxReddit:mock:$rxreddit_version"
