--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,13 +65,13 @@ retrolambda {
 dependencies {
   compile fileTree(include: '*.jar', dir: 'libs')
   compile project(':bypass')
-  def appcompat_version = "23.2.0"
+  def appcompat_version = "23.4.0"
   compile "com.android.support:appcompat-v7:$appcompat_version"
   compile "com.android.support:support-v4:$appcompat_version"
   compile "com.android.support:design:$appcompat_version"
   compile "com.android.support:recyclerview-v7:$appcompat_version"
   compile "com.android.support:cardview-v7:$appcompat_version"
-  compile "com.google.android.gms:play-services-analytics:8.4.0" // Required for Flurry
+  compile "com.google.android.gms:play-services-analytics:9.0.2" // Required for Flurry
   compile "com.squareup.picasso:picasso:2.5.2"
   compile "com.jakewharton:butterknife:7.0.1"
   def rxreddit_version = "0.7"
@@ -84,6 +84,8 @@ dependencies {
   compile "org.parceler:parceler-api:1.0.4"
   apt "org.parceler:parceler:1.0.4"
   compile 'com.jakewharton.timber:timber:4.1.0'
+  compile 'com.google.dagger:dagger:2.2'
+  apt 'com.google.dagger:dagger-compiler:2.2'
   // Debugging dependencies
   debugCompile "com.squareup.leakcanary:leakcanary-android:1.3.1"
   releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:1.3.1"
