--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,8 @@ dependencies {
   compile "org.parceler:parceler-api:1.0.4"
   apt "org.parceler:parceler:1.0.4"
   compile 'com.jakewharton.timber:timber:4.1.0'
+  compile 'com.google.dagger:dagger:2.2'
+  apt 'com.google.dagger:dagger-compiler:2.2'
   // Debugging dependencies
   debugCompile "com.squareup.leakcanary:leakcanary-android:1.3.1"
   releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:1.3.1"
