--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     android:supportsRtl="true">
 
     <activity
-      android:name=".view.activities.MainActivity"
+      android:name=".view.activities.SubredditActivity"
       android:label="@string/app_name"
       android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize">
       <intent-filter>
