--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,18 @@
         <data android:pathPattern="/controversial" />
         <data android:pathPattern="/top" />
         <data android:pathPattern="/r/.*" />
+      </intent-filter>
+    </activity>
+    <activity
+        android:name=".view.activities.UserProfileActivity">
+      <intent-filter>
+        <action android:name="android.intent.action.VIEW" />
+        <category android:name="android.intent.category.DEFAULT" />
+        <category android:name="android.intent.category.BROWSABLE" />
+        <data android:scheme="http" />
+        <data android:scheme="https" />
+        <data android:host="reddit.com" />
+        <data android:host="*.reddit.com" />
         <data android:pathPattern="/u/.*" />
         <data android:pathPattern="/user/.*" />
       </intent-filter>
