--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,9 @@
 apply plugin: 'com.android.application'
+apply plugin: 'android-apt'
+apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'com.jakewharton.hugo'
 apply plugin: 'com.getkeepsafe.dexcount'
-apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'com.github.ben-manes.versions'
-apply plugin: 'com.neenbedankt.android-apt'
 
 android {
   compileSdkVersion 24
@@ -77,7 +77,9 @@ dependencies {
   compile "com.android.support:cardview-v7:$appcompat_version"
   compile "com.google.android.gms:play-services-analytics:9.2.0" // Required for Flurry
   compile "com.squareup.picasso:picasso:2.5.2"
-  compile "com.jakewharton:butterknife:7.0.1"
+  def butterknife_version = "8.0.1"
+  compile "com.jakewharton:butterknife:$butterknife_version"
+  apt "com.jakewharton:butterknife-compiler:$butterknife_version"
   def rxreddit_version = "0.8"
   compile "com.github.damien5314.RxReddit:library:$rxreddit_version"
   compile "com.github.damien5314.RxReddit:android:$rxreddit_version"
