--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,11 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.2.0-alpha3'
+    classpath 'com.android.tools.build:gradle:2.1.2'
+    classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
     classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
     classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.1.1'
     classpath 'com.github.ben-manes:gradle-versions-plugin:0.11.3'
-    classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
   }
 }
 
