--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'com.github.ben-manes.versions'
 
 android {
   compileSdkVersion 24
-  buildToolsVersion "23.0.3"
+  buildToolsVersion '24'
   useLibrary 'org.apache.http.legacy'
 
   defaultConfig {
