--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,11 +95,12 @@ dependencies {
   compile "com.jakewharton.timber:timber:4.1.0"
   compile "com.google.dagger:dagger:2.2"
   apt "com.google.dagger:dagger-compiler:2.2"
+  compile "uk.co.chrisjenx:calligraphy:2.2.0"
   // Debugging dependencies
   debugCompile "com.squareup.leakcanary:leakcanary-android:1.3.1"
   releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:1.3.1"
   def fragmentargs_version = "3.0.2"
   compile "com.hannesdorfmann.fragmentargs:annotation:$fragmentargs_version"
   apt "com.hannesdorfmann.fragmentargs:processor:$fragmentargs_version"
-  compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha3'
+  compile "com.android.support.constraint:constraint-layout:1.0.0-alpha3"
 }
