--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,39 +79,36 @@ dependencies {
     compile "com.android.support:design:$project.ext.supportLibraryVersion"
     compile "com.android.support:recyclerview-v7:$project.ext.supportLibraryVersion"
     compile "com.android.support:cardview-v7:$project.ext.supportLibraryVersion"
-    compile "com.android.support.constraint:constraint-layout:1.0.0-alpha3"
+    compile "com.android.support.constraint:constraint-layout:$project.ext.contraintLayoutVersion"
 
-    compile "com.google.android.gms:play-services-analytics:9.6.1" // Required for Flurry
+    compile "com.google.android.gms:play-services-analytics:$project.ext.playServicesVersion" // Required for Flurry
 
-    compile "com.squareup.picasso:picasso:2.5.2"
+    compile "com.squareup.picasso:picasso:$project.ext.picassoVersion"
 
-    def butterknife_version = "8.0.1"
-    compile "com.jakewharton:butterknife:$butterknife_version"
-    apt "com.jakewharton:butterknife-compiler:$butterknife_version"
+    compile "com.jakewharton:butterknife:$project.ext.butterknifeVersion"
+    apt "com.jakewharton:butterknife-compiler:$project.ext.butterknifeVersion"
 
-    def rxreddit_version = "b16c334cdd02ac2098ad21b3b665c934fb2f8c5d"
-    compile "com.github.damien5314.RxReddit:library:$rxreddit_version"
-    compile "com.github.damien5314.RxReddit:android:$rxreddit_version"
-    debugCompile "com.github.damien5314.RxReddit:mock:$rxreddit_version"
+    compile "com.github.damien5314.RxReddit:library:$project.ext.rxRedditVersion"
+    compile "com.github.damien5314.RxReddit:android:$project.ext.rxRedditVersion"
+    debugCompile "com.github.damien5314.RxReddit:mock:$project.ext.rxRedditVersion"
 
-    compile "io.reactivex:rxandroid:1.2.1"
-    compile "io.reactivex:rxjava:1.2.1"
-    compile "com.artemzin.rxjava:proguard-rules:1.2.1.0"
+    compile "io.reactivex:rxandroid:$project.ext.rxAndroidVersion"
+    compile "io.reactivex:rxjava:$project.ext.rxJavaVersion"
+    compile "com.artemzin.rxjava:proguard-rules:$project.ext.rxJavaProguardVersion"
 
-    compile "com.github.damien5314:TimeSinceTextView:1.2.3"
+    compile "com.github.damien5314:TimeSinceTextView:$project.ext.timeSinceTextViewVersion"
 
-    compile "com.jakewharton.timber:timber:4.1.0"
+    compile "com.jakewharton.timber:timber:$project.ext.timberVersion"
 
-    compile "com.google.dagger:dagger:2.2"
-    apt "com.google.dagger:dagger-compiler:2.2"
+    compile "com.google.dagger:dagger:$project.ext.daggerVersion"
+    apt "com.google.dagger:dagger-compiler:$project.ext.daggerVersion"
 
-    compile "uk.co.chrisjenx:calligraphy:2.2.0"
+    compile "uk.co.chrisjenx:calligraphy:$project.ext.calligraphyVersion"
 
-    def fragmentargs_version = "3.0.2"
-    compile "com.hannesdorfmann.fragmentargs:annotation:$fragmentargs_version"
-    apt "com.hannesdorfmann.fragmentargs:processor:$fragmentargs_version"
+    compile "com.hannesdorfmann.fragmentargs:annotation:$project.ext.fragmentArgsVersion"
+    apt "com.hannesdorfmann.fragmentargs:processor:$project.ext.fragmentArgsVersion"
 
     // Debugging dependencies
-    debugCompile "com.squareup.leakcanary:leakcanary-android:1.3.1"
-    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:1.3.1"
+    debugCompile "com.squareup.leakcanary:leakcanary-android:$project.ext.leakCanaryVersion"
+    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:$project.ext.leakCanaryVersion"
 }
