--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,20 @@ subprojects {
     ext {
         buildToolsVersion = "24.0.2"
         supportLibraryVersion = "24.2.1"
+        contraintLayoutVersion = "1.0.0-alpha3"
+        playServicesVersion = "9.6.1"
+        picassoVersion = "2.5.2"
+        butterknifeVersion = "8.0.1"
+        rxRedditVersion = "000ab08b4cceb6b1b41f614ace41367cfd6ab1ab"
+        rxAndroidVersion = "1.2.1"
+        rxJavaVersion = "1.2.1"
+        rxJavaProguardVersion = "1.2.1.0"
+        timeSinceTextViewVersion = "1.2.3"
+        timberVersion = "4.1.0"
+        daggerVersion = "2.2"
+        calligraphyVersion = "2.2.0"
+        fragmentArgsVersion = "3.0.2"
+        leakCanaryVersion = "1.3.1"
     }
 }
 
