--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,14 +6,15 @@ apply plugin: "com.getkeepsafe.dexcount"
 apply plugin: "com.github.ben-manes.versions"
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion project.ext.compileSdkVersion
     buildToolsVersion "$project.ext.buildToolsVersion"
+
     useLibrary "org.apache.http.legacy"
 
     defaultConfig {
         applicationId "com.ddiehl.android.htn"
         minSdkVersion 15
-        targetSdkVersion 24
+        targetSdkVersion project.ext.targetSdkVersion
         versionCode 9
         versionName "0.5.2"
         resConfigs "en"
