--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ allprojects {
 
 subprojects {
     ext {
+        compileSdkVersion = 24
+        targetSdkVersion = 24
         buildToolsVersion = "24.0.2"
         supportLibraryVersion = "24.2.1"
         contraintLayoutVersion = "1.0.0-alpha3"
