--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,8 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
+org.gradle.jvmargs=-Xmx1536M
+
 ANDROID_KEYSTORE_PATH=
 ANDROID_KEYSTORE_PWD=
 HTN_KEYSTORE_ALIAS=
