--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,11 @@ apply plugin: "me.tatarka.retrolambda"
 apply plugin: "com.jakewharton.hugo"
 apply plugin: "com.getkeepsafe.dexcount"
 apply plugin: "com.github.ben-manes.versions"
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
 
 android {
     compileSdkVersion project.ext.compileSdkVersion
@@ -82,7 +87,12 @@ dependencies {
     compile "com.android.support:cardview-v7:$project.ext.supportLibraryVersion"
     compile "com.android.support.constraint:constraint-layout:$project.ext.contraintLayoutVersion"
 
-    compile "com.google.android.gms:play-services-analytics:$project.ext.playServicesVersion" // Required for Flurry
+    // Required for Flurry
+    compile "com.google.android.gms:play-services-analytics:$project.ext.playServicesVersion"
+    // Fabric Crashlytics plugin
+    compile("com.crashlytics.sdk.android:crashlytics:2.6.5@aar") {
+        transitive = true;
+    }
 
     compile "com.squareup.picasso:picasso:$project.ext.picassoVersion"
 
