--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
             android:theme="@style/AppTheme"
             android:supportsRtl="true">
 
+        <meta-data
+                android:name="io.fabric.ApiKey"
+                android:value="eaccaaf37ee22836fe15fff1daa0c745f6e061e2" />
+
         <activity
                 android:name=".view.activities.DeepLinkDispatcher"
                 android:launchMode="singleTask">
@@ -73,8 +77,7 @@
                 android:name="rxreddit.android.SignInActivity" />
 
         <activity
-                android:name=".subscriptions.SubscriptionManagerActivity"
-                android:exported="true" />
+                android:name=".subscriptions.SubscriptionManagerActivity" />
 
     </application>
 
