--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ retrolambda {
 dependencies {
     compile fileTree(include: "*.jar", dir: "libs")
     compile project(":bypass")
+    compile project(":logging")
 
     compile "com.android.support:appcompat-v7:$project.ext.supportLibraryVersion"
     compile "com.android.support:support-v4:$project.ext.supportLibraryVersion"
@@ -108,8 +109,6 @@ dependencies {
     compile "com.artemzin.rxjava:proguard-rules:$project.ext.rxJavaProguardVersion"
 
     compile "com.github.damien5314:TimeSinceTextView:$project.ext.timeSinceTextViewVersion"
-
-    compile "com.jakewharton.timber:timber:$project.ext.timberVersion"
 
     compile "com.google.dagger:dagger:$project.ext.daggerVersion"
     apt "com.google.dagger:dagger-compiler:$project.ext.daggerVersion"
