--- a/build.gradle
+++ b/build.gradle
@@ -41,11 +41,12 @@ subprojects {
         rxJavaVersion = "1.2.1"
         rxJavaProguardVersion = "1.2.1.0"
         timeSinceTextViewVersion = "1.2.3"
-        timberVersion = "4.3.1"
         daggerVersion = "2.7"
         calligraphyVersion = "2.2.0"
         fragmentArgsVersion = "3.0.2"
         leakCanaryVersion = "1.3.1"
+        junitVersion = "4.12"
+        mockitoVersion = "1.10.19"
     }
 }
 
