--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,15 +113,12 @@ dependencies {
     implementation "com.google.android.exoplayer:exoplayer-ui:$EXOPLAYER_VERSION"
     implementation "com.github.MikeOrtiz:TouchImageView:$TOUCH_IMAGEVIEW_VERSION"
 
-    debugImplementation "com.squareup.leakcanary:leakcanary-android:$LEAK_CANARY_VERSION"
-    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$LEAK_CANARY_VERSION"
-
     androidTestImplementation "junit:junit:$JUNIT_VERSION"
     androidTestImplementation "org.mockito:mockito-core:$MOCKITO_VERSION"
     kaptAndroidTest "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
     androidTestImplementation "androidx.annotation:annotation:$ANDROIDX_ANNOTATION"
-    androidTestImplementation "androidx.test:runner:$ANDROIDX_TEST_SUPPORT"
-    androidTestImplementation "androidx.test:rules:$ANDROIDX_TEST_SUPPORT"
+    androidTestImplementation "androidx.test:runner:$ANDROIDX_TEST_RUNNER_VERSION"
+    androidTestImplementation "androidx.test:rules:$ANDROIDX_TEST_RULES_VERSION"
 }
 
 Properties getProperties(def filePath) {
